--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <!-- 用于开启理想视口，用于做移动端网页适配 -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- 用于配置浏览器页签 + 地址栏颜色 （仅支持安卓手机浏览器  兼容不好） -->
     <meta name="theme-color" content="#000000" />
+
+    <!-- 网站信息 -->
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- 苹果手机网页添加到手机主屏后的 图标 -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+
+    <!-- 应用加壳 时的配置文件 -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
